--- a/src/config-scss/variables.scss
+++ b/src/config-scss/variables.scss
@@ -4,4 +4,23 @@
     
     --primary-color: #212121;
     --secondary-color: #FF5473;
+
+    // --fire-type-color: #EF8030;
+    // --normal-type-color: #A9A77B;
+    // --water-type-color: #6390F0;
+    // --eletric-type-color: #F6D12C;
+    // --grass-type-color: #7BC74D;
+    // --ice-type-color: #97D8D6;
+    // --fighthing-type-color: #C22F29;
+    // --poison-type-color: #A23EA0;
+    // --ground-type-color: #E3BE65;
+    // --flying-type-color: #A88EF3;
+    // --psychic-type-color: #F95587;
+    // --bug-type-color: #A7B81A;
+    // --rock-type-color: #B7A036;
+    // --ghost-type-color: #735797;
+    // --dragon-type-color: #6F35FC;
+    // --dark-type-color: #705647;
+    // --steel-type-color: #B6B7CF;
+    // --fairy-type-color: #D784AD;
 }
