--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,5 @@
 <header>
-    <img src="assets/logo.svg" alt="Logo da Pokedex">
+    <a [routerLink]="['']">
+        <img src="assets/logo.svg" alt="Logo da Pokedex">
+    </a>
 </header>
