--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 @import './config-scss/variables.scss';
 @import './config-scss/reset.scss';
 @import './config-scss/rem-calc.scss';
+@import './config-scss/btn.scss';
+@import './config-scss/animation.scss';
 
 html {
     font-family: 'Roboto', sans-serif;
@@ -8,7 +10,8 @@ html {
 }
 
 main {
-    max-width: rem-calc(600);
+    max-width: rem-calc(620);
     margin: 0 auto;
+    padding: 0 rem-calc(10);
     box-sizing: border-box;
 }
